--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,15 +14,12 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.AplicacionCrud"
         tools:targetApi="31" >
-        <activity
-            android:name=".Op_Eliminar"
-            android:exported="false"
-            android:theme="@style/Theme.AplicacionCrud" />
-        <activity
-            android:name=".Login"
-            android:exported="false" />
+
         <activity
             android:name=".MainActivity"
+            android:exported="true" />
+        <activity
+            android:name=".Login"
             android:exported="true" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
